# librply

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: quad_cube.ply  triangle_cube.ply
src/lib/: CMakeLists.txt  rply.c
src/tools/: CMakeLists.txt  create_ply.c  dump.c  dump_vertices.c
